--- a/src/styles/abstracts/_colors.scss
+++ b/src/styles/abstracts/_colors.scss
@@ -1,10 +1,9 @@
 :root {
-  --yellow: #f6bd60ff;
-  --paige: #f7ede2ff;
-  --rose: #f5cac3ff;
-  --green: #84a59dff;
-  --coral: #f28482ff;
-  --text-dark: #344054;
+  --blue: #2c363fff;
+  --pink: #e75a7cff;
+  --grey: #f2f5eaff;
+  --teal: #17a398;
+  --green: #bbc7a4ff;
   --dark: #1d2939;
   --black: #171717;
   --white: #ffffff;
