--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,7 +1,7 @@
 body {
-  font-family: "Noto Sans", sans-serif;
+  font-family: "Playfair Display", serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  font-variation-settings: "wdth" 100;
+  overflow-x: hidden;
 }
