--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,5 +1,5 @@
 .header {
-  @apply py-[1rem] px-[1rem] sm:px-[2rem] shadow-lg uppercase ;
+  @apply py-[1rem] px-[1rem] sm:px-[2rem] shadow-lg uppercase;
   .nav__desktop {
     @apply hidden lg:flex justify-between items-center;
     .nav__logo {
@@ -120,7 +120,7 @@
       }
     }
     .nav__mobile__nav {
-      @apply absolute top-0 bottom-0 -right-full  transition-all duration-300 ease-in-out bg-blue font-[500] text-center w-full sm:w-[320px] text-white text-[1.5rem];
+      @apply fixed z-10 top-0 bottom-0 -right-full  transition-all duration-300 ease-in-out bg-blue font-[500] text-center w-full sm:w-[320px] text-white text-[1.5rem];
       &.open {
         @apply right-0  transition-all duration-300 ease-in-out;
       }
