--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,3 +1,8 @@
+html {
+  scroll-behavior: smooth;
+  scroll-padding: 5rem;
+}
+
 body {
   font-family: "Playfair Display", serif;
   font-optical-sizing: auto;
