Footer created & routes updated

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+<footer>
+    <p>&copy; 2024 Photo Forge <span>V1.0.0</span>. All rights reserved.</p>
+    <ul class="footer__links">
+        <li><a class="footer__link" routerLink="/about" routerLinkActive="active">About Us</a></li>
+        <li><a class="footer__link" routerLink="/privacy" routerLinkActive="active">Privacy</a></li>
+        <li><a class="footer__link" routerLink="/terms-of-service" routerLinkActive="active">Terms of Service</a></li>
+    </ul>
+</footer>
