--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -26,15 +26,15 @@
     z-index: -1;
   }
   .hero__title {
-    @apply text-[1.1rem] font-[600] bg-[#ffffffb6];
+    @apply text-[1.1rem] font-[600] bg-[#ffffffb6] px-[0.7rem];
   }
   .hero__headline {
     @apply text-[2rem] sm:text-[2.4rem] font-[700] uppercase bg-[#ffffffb6] px-[1rem];
   }
   .hero__actions {
-    @apply px-[2rem] flex flex-col sm:flex-row gap-[1.5rem] w-full justify-center;
+    @apply px-[1.5rem] flex flex-col sm:flex-row gap-[1.5rem] w-full justify-center;
     .hero__action {
-      @apply block  min-w-[10rem] text-[1.3rem] uppercase text-white py-[0.5rem] px-[2.2rem] rounded-full font-[600];
+      @apply block  min-w-[10rem] text-[1.3rem] uppercase text-white py-[0.5rem] px-[1.7rem] rounded-full font-[600];
       box-shadow: 0px 1px 3px black;
       letter-spacing: 1.5px;
       &:first-child {
